--- a/index.html
+++ b/index.html
@@ -1,24 +1,50 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
-<! DOCTYPE html>
-<html lang ="en">
-<head>
-    <meta charset = "UTF-8">
-    <title>Thabo's Website</title>
-</head>  
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>My Resume</title>
+    </head>
 
 <body>
-    <h1>Thabo Malekanyo's Portfolio!!</h1>
-    <h2>Iam an aspiring Web Developer.</h2>
-<hr/>
-<h3><a href="./public/movie-ranking.html">Movie Ranking Project</a></h3>
-<img src="./assets/images/Tash's favourite movies.png" height="400" alt="Favourite Movies"/>
-<h3><a href="./public/birthday-invite.html">Birthday Invite Project</a></h3>
-<img src="./assets/images/Tash birthday.png" height="400" alt="Birthday Invite" />
-<hr/>
-<a href="./public/about.html">About Me</a>
-<a href="./public/contact.html">Contact Me</a>
-</body>
+    <h1>Tash Inn</h1>
+    <p>
+        1345 Sunrise View,Rustenburg-0304<br/>
+        072 034 5678 | tash@gmail.com<br/>
+    </p>
+    <hr/>
+    <img src="./images/1745914562722.jpg" height="100" alt="Car"/>
+    <h2>Summary</h2>
+    <p>Iam a dedicated and hardworking person who is eager to learn,I have experience in Skills Development.</p>
+    <hr/>
+    <h2>Education</h2>
+    <ul>
+        <li>Civil Engineering Diploma-University of Hustlers</li>
+    </ul>
+    <hr/>
+    <h2>Work Experience</h2>
+        <ul>
+            <h3><li>Skills Development Facilitator-A23 Inc</li></h3>
+        </ul>
+        <p>March 2019-April 2025</p>
+        <ul>
+            <li>Facilitate Summative Assesments</li>
+            <li>Simulations</li>
+            <li>Performance Assesments</li>
+            <li>Trade Test Preparations</li>
+            <li>Asses Learner POE</li>
+        </ul>
+        <hr/>
+        <h2>Skills</h2>
+        <ul>
+            <li>Ability to work individual/Team</li>
+            <li>Organizational Skills</li>
+            <li>Customer Service</li>
+        </ul>
+        <hr/>
+        <h2>Other</h2>
 
+<footer>
+    <p>&copy; Tash Inn.All Rights reserved.</p>
+</footer>     
+</body>    
 </html>
-
-
